[project]
name = "boom_boot"
version = "1.6.6"
license = { text="GPL-2.0-only" }
authors = [
  { name="Bryn M. Reeves", email="bmr@redhat.com" },
]
description = "The Boom Boot Manager"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "dbus-python >= 1.2.16",
]

[project.urls]
Homepage = "https://github.com/snapshotmanager/boom-boot"
Issues = "https://github.com/snapshotmanager/boom-boot/issues"

[build-system]
requires = [
    "wheel",
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"
