[metadata]
name = boom_boot
author = Bryn M. Reeves
author_email = bmr@redhat.com
url = https://github.com/snapshotmanager/boom
description = The Boom Boot Manager
license = "GPL-2.0-only"
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: boom.__version__
platforms = 
    Linux
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = boom
scripts = bin/boom
install_requires =
    dbus-python >= 1.2.16
